--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 simple translator that uses gpt 3 model to translate text to english. Used to split large text to smaller chunks and translate each chunk separately, that way text that is too large to translate will still be translated.
-The entire project was also generated using GPT-4 by prompting chat gpt to generate and modify the project. I made no manual changes to the code output from chat gpt.
+The entire project was also generated using GPT-4 by prompting chat gpt to generate and modify the project. The only change I made to the output code is to modify the chat-gpt api url, the url provided by chat-gpt code was incorrect.
 
 each sub folder (v1, v2, v3) was the state of the code after prompting chat-gpt to make modifications. The root folder contains the most recent version.
