--- a/README
+++ b/README
@@ -2,3 +2,9 @@ simple translator that uses gpt 3.5 turbo model to translate text to english. Us
 The entire project was also generated using GPT-4 by prompting chat gpt to generate and modify the project. The only change I made to the output code is to modify the chat-gpt api url, the url provided by chat-gpt code was incorrect.
 
 each sub folder (v0, v1, v2, v3) was the state of the code after prompting chat-gpt to make modifications. The root folder contains the most recent version. Chat gpt logs used to generate the code is also provided.
+
+
+Credits:
+
+translation icon
+<a href="https://www.flaticon.com/free-icons/translation" title="translation icons">Translation icons created by Freepik - Flaticon</a>
