--- a/README
+++ b/README
@@ -6,4 +6,4 @@ each sub folder (v0, v1, v2, v3) was the state of the code after prompting chat-
 
 Credits:
 
-translation icon: [Translation icons created by Freepik - Flaticon]("https://www.flaticon.com/free-icons/translation" title="translation icons")
+translation icon: [Translation icons created by Freepik - Flaticon]("https://www.flaticon.com/free-icons/translation")
